--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </div>
   
   <div>
-    <h2>Facts about me</h2>
+    <h2>Funny facts about me</h2>
     <p>🎬 I love watching Japanese anime like Attack On Titan, The Unpromised Neverland and Death Note.</p>
     <p>🎮 With 1000 hours of Animal Crossing on my switch, you can't say that I'm not a fan of this best quarantine game.</p>
     </div>
